crates/ruff_python_parser/tests/snapshots/visitor__bytes_literals.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprBytesLiteral
    - BytesLiteral
    - BytesLiteral
    - BytesLiteral
