crates/ruff_python_parser/tests/snapshots/visitor__class_type_parameters.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtClassDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - StmtExpr
    - ExprEllipsisLiteral
