crates/ruff_python_parser/tests/snapshots/visitor__compare.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprCompare
    - ExprNumberLiteral
    - Lt
    - Lt
    - ExprName
    - ExprNumberLiteral
