crates/ruff_python_parser/tests/snapshots/visitor__decorators.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - ExprName
  - Parameters
  - StmtPass
- StmtClassDef
  - ExprName
  - StmtPass
