crates/ruff_python_parser/tests/snapshots/visitor__dict_comprehension.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprDictComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
    - ExprBinOp
      - ExprName
      - Pow
      - ExprNumberLiteral
