crates/ruff_python_parser/tests/snapshots/visitor__f_strings.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprFString
    - StringLiteral
    - FString
      - FStringLiteralElement
      - FStringExpressionElement
        - ExprName
        - FStringLiteralElement
        - FStringExpressionElement
          - ExprName
        - FStringLiteralElement
      - FStringLiteralElement
