crates/ruff_python_parser/tests/snapshots/visitor__function_arguments.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - Parameters
    - ExprNumberLiteral
    - ExprNumberLiteral
    - ExprNumberLiteral
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
  - StmtPass
