crates/ruff_python_parser/tests/snapshots/visitor__function_positional_only_with_default.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - Parameters
    - ExprNumberLiteral
    - ExprNumberLiteral
    - Parameter
    - Parameter
    - Parameter
    - Parameter
  - StmtPass
