crates/ruff_python_parser/tests/snapshots/visitor__function_type_parameters.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - Parameters
  - StmtExpr
    - ExprEllipsisLiteral
