crates/ruff_python_parser/tests/snapshots/visitor__list_comprehension.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprListComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
