crates/ruff_python_parser/tests/snapshots/visitor__match_class_pattern.snap
---
source: crates/ruff_python_parser/tests/visitor.rs
expression: trace
---
- StmtMatch
  - ExprName
  - MatchCase
    - PatternMatchClass
      - ExprName
      - PatternMatchValue
        - ExprNumberLiteral
      - PatternMatchValue
        - ExprNumberLiteral
    - StmtExpr
      - ExprEllipsisLiteral
  - MatchCase
    - PatternMatchClass
      - ExprName
      - PatternMatchValue
        - ExprNumberLiteral
      - PatternMatchValue
        - ExprNumberLiteral
      - PatternMatchValue
        - ExprNumberLiteral
    - StmtExpr
      - ExprEllipsisLiteral
